--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
             </div>
         </div>
     </div>
+    <div class="login">
+        <a href="web/login/login.html">Login</a>
+    </div>
             <div class="container3" id="contact">
                 <h2 data-i18n="contact.title">Contact Me</h2>
                 <p data-i18n="contact.messagePrompt">click here to send me a message</p>
